--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   rxdart: ^0.27.3
   provider: ^6.0.2
   url_launcher: ^6.0.20
+  alert_dialog: ^1.0.1
+  flutter_exit_app: ^1.0.5
 
 dev_dependencies:
   hive_generator: 
