--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   cupertino_icons: ^1.0.2
   animate_do: ^2.1.0
   carousel_slider: ^4.0.0
@@ -53,6 +54,7 @@ dependencies:
   url_launcher: ^6.0.20
   alert_dialog: ^1.0.1
   flutter_exit_app: ^1.0.5
+  flutter_share: ^2.0.0
 
 dev_dependencies:
   hive_generator: 
