--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,8 @@ dependencies:
   geolocator: ^7.7.1
   flutter_svg: ^1.0.3
   google_maps_flutter: ^2.1.1
-  flutter_local_notifications: ^9.2.0
-  timezone: ^0.8.0
+  flutter_local_notifications: ^11.0.1
+  timezone: ^0.9.0
   animated_card: ^2.0.0
   fluttertoast: ^8.0.8
   flutter_native_timezone: ^2.0.0
@@ -55,6 +55,7 @@ dependencies:
   alert_dialog: ^1.0.1
   flutter_exit_app: ^1.0.5
   flutter_share: ^2.0.0
+  path_provider: ^2.0.11
 
 dev_dependencies:
   hive_generator: 
@@ -67,7 +68,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
